fixed spacing and alignment of openpgp header

--- a/ui/skin/classic-seamonkey/enigmail.css
+++ b/ui/skin/classic-seamonkey/enigmail.css
@@ -105,6 +105,17 @@
   font-style: italic;
 }
 
+.enigmailHeaderName {
+  color: #888a85; /* lower contrast, TB3 */
+  text-align: right;
+  background-color: transparent;
+  -moz-margin-end: 2px;
+}
+
+.enigmailHeaderSpacer {
+  width: 2px;
+}
+
 .enigMsgHdrView-flat-button {
   min-width: 1px !important;
   -moz-appearance: none;
