--- a/ui/skin/classic/enigmail.css
+++ b/ui/skin/classic/enigmail.css
@@ -76,18 +76,15 @@ toolbar[iconsize="small"] #button-enigmail-send[disabled] {
  color: black;
 }
 
-.enigmailHeaderNameBox {
-  width: 7.7em;
-  background-color:#d8e0e8;
-  color: black;
+.enigmailHeaderName {
+  color: #888a85; /* lower contrast, TB3 */
+  text-align: right;
+  background-color: transparent;
+  -moz-margin-end: 2px;
 }
 
-.enigmailHeaderValue {
-  margin: 0 0 .25em 0;
-  min-width: 50px;
-  white-space: normal;
-  background-color: #d8e0e8;
-  color: black;
+.enigmailHeaderSpacer {
+  width: 2px;
 }
 
 .enigmailHeaderBoxLabelNoSignature {
@@ -134,7 +131,7 @@ toolbar[iconsize="small"] #button-enigmail-send[disabled] {
 .enigMsgHdrView-flat-button {
   min-width: 1px !important;
   -moz-appearance: none;
-  color: GrayText;
+  color: black;
   background-color: transparent;
   border: 2px solid transparent;
   margin-top: 0px;
